# libcjel-ir

./: .clang-format  .config.mk  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE.txt  Makefile  README.org  idea.org  libcjel-ir.h  libcsel-ir.all.h  libcsel-ir.h  libnovel.all.h  libnovel.h
.cmake/: Findlibcjel-ir.cmake  LibPackage.cmake  config.mk
etc/: CMakeLists.txt
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  CjelIR.cpp  example.cpp  instruction.cpp  main.cpp  main.h
etc/test/constant/: bit.cpp  structure.cpp
etc/test/type/: bit.cpp  operator.cpp  structure.cpp
src/: Block.cpp  Block.h  CMakeLists.txt  CallableUnit.cpp  CallableUnit.h  CjelIR.h  Component.cpp  Component.h  Constant.cpp  Constant.h  CselIR.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  Interconnect.cpp  Interconnect.h  Intrinsic.cpp  Intrinsic.h  Memory.cpp  Memory.h  Module.cpp  Module.h  Novel.h  Reference.cpp  Reference.h  Scope.cpp  Scope.h  Statement.cpp  Statement.h  Structure.cpp  Structure.h  Type.cpp  Type.h  User.cpp  User.h  Value.cpp  Value.h  Variable.cpp  Variable.h  (+8 more)
src/analyze/: CjelIRDumpPass.cpp  CjelIRDumpPass.h  CselIRDumpPass.cpp  CselIRDumpPass.h  NovelDumpPass.cpp  NovelDumpPass.h
src/transform/: NovelToC11Pass.cpp  NovelToC11Pass.h  NovelToLLPass.cpp  NovelToLLPass.h  NovelToVHDLPass.cpp  NovelToVHDLPass.h
uts/: CjelIR.cpp  CselIR.cpp  example.cpp  instruction.cpp  isa.cpp  main.cpp  main.h  other.cpp  test.cpp
uts/Constant/: Bit.cpp
uts/Type/: getBit.cpp  operator.cpp
uts/constant/: bit.cpp  structure.cpp
uts/subject/: example.cpp
uts/type/: bit.cpp  operator.cpp  structure.cpp
var/: bench.cpp  test.cpp
var/stash/: other.cpp  test.cpp
